--- a/aplicacoes/gestao-pessoas/src/main/resources/Termo_Compromisso.jrxml
+++ b/aplicacoes/gestao-pessoas/src/main/resources/Termo_Compromisso.jrxml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Termo_Compromisso" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fb43c8cf-8e19-4469-8326-ffbf1ed5b47c">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Termo_Compromisso" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" >
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="383"/>
-	<field name="nome_completo" class="java.lang.String"/>
-	<field name="data_nascimento" class="java.lang.String"/>
-	<field name="nome_mae" class="java.lang.String"/>
+	<field name="nomeCompleto" class="java.lang.String"/>
+	<field name="dataNascimento" class="java.lang.String"/>
+	<field name="nomeMae" class="java.lang.String"/>
 	<field name="telefone" class="java.lang.String"/>
-	<field name="cpf" class="java.lang.String"/>
+	<field name="pessoa.pessoa.cpf" class="java.lang.String"/>
 	<field name="semestre" class="java.lang.String"/>
 	<field name="matricula" class="java.lang.String"/>
-	<field name="email" class="java.lang.String"/>
-	<field name="end.rua" class="java.lang.String"/>
-	<field name="curso.nome" class="java.lang.String"/>
+	<field name="pessoa.email" class="java.lang.String"/>
+	<field name="endereco" class="java.lang.String"/>
+	<field name="curso" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="42" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="555" height="42" uuid="6840adf6-c6ac-4a74-a5bc-4e8300c52e92"/>
+				<reportElement x="0" y="0" width="555" height="42" />
 				<textElement>
 					<font fontName="Ubuntu" size="12" isBold="true"/>
 				</textElement>
@@ -32,7 +32,7 @@ Coordenadoria da Agência de Estágios]]></text>
 	<pageHeader>
 		<band height="21" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="1" width="555" height="20" uuid="a8ecf63c-53df-41ea-b792-26c142accb42"/>
+				<reportElement x="0" y="1" width="555" height="20" />
 				<textElement textAlignment="Center">
 					<font fontName="Ubuntu" size="12" isBold="true"/>
 				</textElement>
@@ -43,7 +43,7 @@ Coordenadoria da Agência de Estágios]]></text>
 	<detail>
 		<band height="710" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="20" width="299" height="87" uuid="75476a17-5a96-4b9c-a6d0-47b04cd688e5"/>
+				<reportElement x="0" y="20" width="299" height="87" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
@@ -55,49 +55,49 @@ Setor: Campus Quixadá
 Definição da área de estágio: Ciência da Computação]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="20" width="134" height="20" uuid="a8346030-c49c-4a51-9ba0-ff7225a858fa"/>
+				<reportElement x="299" y="20" width="134" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[CNPJ: 07.272.636/0001-31]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="40" width="134" height="20" uuid="ee2e4570-6e3d-47b5-943e-9303b378d852"/>
+				<reportElement x="299" y="40" width="134" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Cidade/UF: Quixadá-Ceará]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="60" width="65" height="20" uuid="e26026fb-14fd-4bad-b879-1d8e84454d02"/>
+				<reportElement x="299" y="60" width="65" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[ Supervisor: ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="80" width="134" height="27" uuid="5650e095-11f4-46dd-bdb8-49e8a79c43ae"/>
+				<reportElement x="299" y="80" width="134" height="27" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[ Fone/Fax: (88) 34120919]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="107" width="555" height="20" uuid="e73a1add-e390-436d-9503-e4327892e4cd"/>
+				<reportElement x="0" y="107" width="555" height="20" />
 				<textElement textAlignment="Center">
 					<font fontName="Ubuntu" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INSTITUIÇÃO DE ENSINO]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="364" y="60" width="191" height="20" uuid="f276aa7e-f534-41be-9002-25325d4d59ad"/>
+				<reportElement x="364" y="60" width="191" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nome_completo}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomeCompleto}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="127" width="299" height="83" uuid="f7a59371-ad74-4feb-93ca-6e30011deeee"/>
+				<reportElement x="0" y="127" width="299" height="83" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
@@ -109,175 +109,175 @@ Setor: Campus Quixadá
 Definição da área de estágio: Ciência da Computação]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="147" width="148" height="20" uuid="1cc60906-72de-4406-9716-35d1ed68bce4"/>
+				<reportElement x="299" y="147" width="148" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Cidade/UF: Quixadá-Ceará]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="187" width="134" height="20" uuid="aa802724-bd72-4697-b0ff-ba411acfc0c6"/>
+				<reportElement x="299" y="187" width="134" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[ Fone/Fax: (88) 34120919]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="364" y="167" width="191" height="20" uuid="377edfd3-662a-4181-8357-a56cadd4c691"/>
+				<reportElement x="364" y="167" width="191" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nome_completo}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomeCompleto}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="299" y="127" width="134" height="20" uuid="b079949f-201e-433d-aa81-9bd538981c11"/>
+				<reportElement x="299" y="127" width="134" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[CNPJ: 07.272.636/0001-31]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="299" y="167" width="65" height="20" uuid="68128656-efdc-4f65-884d-380fd59f1fa2"/>
+				<reportElement x="299" y="167" width="65" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[ Supervisor: ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="210" width="555" height="20" uuid="11e1ec68-f5f2-47f9-8bee-4e5bc3b92a50"/>
+				<reportElement x="0" y="210" width="555" height="20" />
 				<textElement textAlignment="Center">
 					<font fontName="Ubuntu" size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ESTAGIÁRIO (A)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="230" width="100" height="20" uuid="4d13d704-482a-4bc5-bcd1-01e1a3eb9c77"/>
+				<reportElement x="0" y="230" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Nome]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="100" y="230" width="199" height="20" uuid="8f1ec1ea-cf89-4d8a-b310-3002e43dd218"/>
+				<reportElement x="100" y="230" width="199" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nome_completo}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomeCompleto}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="250" width="100" height="20" uuid="da28519e-5305-4383-9928-6a3fe755210e"/>
+				<reportElement x="0" y="250" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Nome da Mãe]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="100" y="250" width="199" height="20" uuid="374cf987-1ca9-49a6-8569-ef077b0e39d9"/>
+				<reportElement x="100" y="250" width="199" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nome_mae}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomeMae}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="270" width="100" height="20" uuid="f1b506cb-d1f6-4687-9c80-eabaa86ac197"/>
+				<reportElement x="0" y="270" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Endereco]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="290" width="100" height="20" uuid="9b21166f-d685-47ce-930a-2d60cd89ea50"/>
+				<reportElement x="0" y="290" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Fone]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="100" y="290" width="199" height="20" uuid="2aca04ee-119f-472f-ba24-ccfa8e852dc0"/>
+				<reportElement x="100" y="290" width="199" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{telefone}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="316" y="250" width="100" height="20" uuid="48ef5ea4-1d1b-420e-8d38-70fef3e2ba79"/>
+				<reportElement x="316" y="250" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<text><![CDATA[CPF]]></text>
+				<text><![CDATA[pessoa.cpf]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="416" y="250" width="139" height="20" uuid="2dc35e10-f021-4642-a54d-44324871f405"/>
+				<reportElement x="416" y="250" width="139" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{cpf}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pessoa.cpf}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="310" width="100" height="20" uuid="e359a477-b7d1-4eeb-bda7-099b8e46dd08"/>
+				<reportElement x="0" y="310" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Curso]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="316" y="310" width="100" height="20" uuid="fcfa5a4b-0b69-4bd7-b8a8-ab62432df8ad"/>
+				<reportElement x="316" y="310" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Semestre]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="416" y="310" width="139" height="20" uuid="3ea15940-9f8b-4322-b2b9-e0b136d17865"/>
+				<reportElement x="416" y="310" width="139" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{semestre}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="316" y="230" width="100" height="20" uuid="188cfb3e-80c7-434b-ae16-3286492cf4ff"/>
+				<reportElement x="316" y="230" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Data Nascimento]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="416" y="230" width="139" height="20" uuid="71871c0d-2e90-49a8-bd90-a2f5a5871fc7"/>
+				<reportElement x="416" y="230" width="139" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{data_nascimento}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{dataNascimento}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="316" y="270" width="100" height="20" uuid="823756b0-445c-4d35-be69-11278f33d776"/>
+				<reportElement x="316" y="270" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<text><![CDATA[email]]></text>
+				<text><![CDATA[pessoa.email]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="416" y="270" width="139" height="20" uuid="300b45f1-164a-4f0e-aaca-1040785fe7b3"/>
+				<reportElement x="416" y="270" width="139" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pessoa.email}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="316" y="290" width="100" height="20" uuid="416a05b1-28ad-4695-83e1-b5b121def7d5"/>
+				<reportElement x="316" y="290" width="100" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<text><![CDATA[Nº matricula]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="416" y="290" width="139" height="20" uuid="8c70f529-d794-4550-bb50-7c15300a0dad"/>
+				<reportElement x="416" y="290" width="139" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{matricula}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="330" width="555" height="48" uuid="5f25a1a2-8c32-4200-b3a8-475abc7bd2c3"/>
+				<reportElement x="0" y="330" width="555" height="48" />
 				<textElement>
 					<font fontName="Ubuntu" size="8"/>
 				</textElement>
@@ -286,21 +286,21 @@ CLÁUSULA PRIMEIRA - A CONCEDENTE se compromete a conceder, a estudantes previam
 ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="100" y="270" width="199" height="20" uuid="0e38700b-554c-4548-8751-7db5926e6a2d"/>
+				<reportElement x="100" y="270" width="199" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{end.rua}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="310" width="199" height="20" uuid="607d9711-e24a-4e08-a496-6370d9a08a32"/>
+				<reportElement x="100" y="310" width="199" height="20" />
 				<textElement>
 					<font fontName="Ubuntu" size="10"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{curso.nome}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{curso}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="378" width="555" height="332" uuid="eef730c3-2328-471e-a77b-3606f4cc034f"/>
+				<reportElement x="0" y="378" width="555" height="332" />
 				<textElement>
 					<font fontName="Ubuntu" size="8"/>
 				</textElement>
@@ -329,7 +329,7 @@ Quixadá, ............. de ....................... de ........
                                                                             Coordenador da Agência de Estágio]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="0" width="555" height="16" uuid="a58c0118-f7d9-41bb-b6c1-3c8fc616c489"/>
+				<reportElement x="0" y="0" width="555" height="16" />
 				<textElement textAlignment="Center">
 					<font fontName="Ubuntu" size="12" isBold="true"/>
 				</textElement>
