--- a/aplicacoes/gestao-pessoas/src/main/resources/Declaracao_Estagio.jrxml
+++ b/aplicacoes/gestao-pessoas/src/main/resources/Declaracao_Estagio.jrxml
@@ -11,7 +11,7 @@
 			<staticText>
 				<reportElement x="0" y="140" width="555" height="79" />
 				<textElement textAlignment="Center">
-					<font fontName="Ubuntu" size="14" isBold="true"/>
+					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[UNIVERSIDADE FEDERAL DO CEARÁ
  CAMPUS DE QUIXADÁ
@@ -21,7 +21,7 @@ NÚCLEO DE PRÁTICAS EM INFORMÁTICA]]></text>
 			<staticText>
 				<reportElement x="0" y="258" width="555" height="20" />
 				<textElement textAlignment="Center">
-					<font fontName="Ubuntu" size="14" isBold="true" isUnderline="true" isStrikeThrough="false"/>
+					<font fontName="Arial" size="14" isBold="true" isUnderline="true" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[DECLARAÇÃO DE ESTÁGIO]]></text>
 			</staticText>
