Correção da posição do css footer

--- a/aplicacoes/gestao-pessoas/src/main/webapp/resources/css/main-gestao.css
+++ b/aplicacoes/gestao-pessoas/src/main/webapp/resources/css/main-gestao.css
@@ -15,7 +15,7 @@ a {
 	margin-bottom: 4px;
 }
 
-/* BOTÕES */
+/* BOTï¿½ES */
 .btn {
 	border-radius: 0;
 }
@@ -28,7 +28,6 @@ a {
 
 /* FOOTER */
 .gp-footer {
-	position: fixed;
 	bottom: 0px;
 	width: 100%;
 	padding: 10px 0;
