Atualização do front-end; alinhamento de elementos dos cabeçalhos; Conclusão de refatoração do CoordenadorController para SupervisorController;

--- a/aplicacoes/gestao-pessoas/src/main/resources/Termo_Compromisso_2015.jrxml
+++ b/aplicacoes/gestao-pessoas/src/main/resources/Termo_Compromisso_2015.jrxml
@@ -8,7 +8,7 @@
 	<field name="nomeMae" class="java.lang.String"/>
 	<field name="telefone" class="java.lang.String"/>
 	<field name="pessoa.cpf" class="java.lang.String"/>
-	<field name="semestre" class="java.lang.String"/>
+	<field name="semestre" class="java.lang.Integer"/>
 	<field name="matricula" class="java.lang.Integer"/>
 	<field name="pessoa.email" class="java.lang.String"/>
 	<field name="endereco" class="java.lang.String"/>
