--- a/aplicacoes/gestao-pessoas/src/main/webapp/resources/css/main-gestao.css
+++ b/aplicacoes/gestao-pessoas/src/main/webapp/resources/css/main-gestao.css
@@ -97,11 +97,49 @@ h1, .h1, h2, .h2, h3, .h3 {
 	margin: 0;
 }
 
+.panel {
+    border: 0;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.panel-primary>.panel-heading {
+    color: #008cba;
+    background-color: #EDEDED;
+    border-bottom: 4px solid #008CBA;
+}
+
+.panel-success>.panel-heading {
+    color: #43ac6a;
+    background-color: #EDEDED;
+    border-bottom: 4px solid #43ac6a;
+}
+
+.panel-info>.panel-heading {
+    color: #5bc0de;
+    background-color: #EDEDED;
+    border-bottom: 4px solid #5bc0de;
+}
+
+.panel-danger>.panel-heading {
+    color: #333333;
+    background-color: #EDEDED;
+    border-bottom: 4px solid #008CBA;
+}
+
 .titulo-panels {
     display: inline;
     vertical-align: middle;	
 }
+.pull-right{
+	margin-right: -15px;
+}
 .div-inline {
     display: inline;
     vertical-align: middle;	
+}
+.informacao {
+	min-width: 38.8594px; 
+	min-height: 33px;
 }
