--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
@@ -33,7 +33,7 @@
 	        <li class="dropdown">
 	          <a th:href="@{#}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span th:text="${session.nomeUsuario}"></span> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 	          <ul class="dropdown-menu" role="menu">
-	            <li><a th:href="@{MeusDados}"><i class="fa fa-user" aria-hidden="true"></i> Meus Dados</a></li>
+	            <li><a th:href="@{/Estagiario/MeusDados}"><i class="fa fa-user" aria-hidden="true"></i> Meus Dados</a></li>
 	            <li class="divider"></li>
 	            <li><a th:href="@{/logout}"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair</a></li>
 	          </ul>
