--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/editar-estagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/editar-estagiario.html
@@ -102,8 +102,8 @@
 			          </div>
 			
 			          <div class="form-item col-sm-4">
-			            <label for="contaHangout" class="control-label">Conta Hangout:</label>
-			            <input id="contaHangout" name="contaHangout" placeholder="Conta Hangout" type="email" class="form-control" />
+			            <label for="email" class="control-label">*E-mail:</label>
+			            <input id="email" name="email" placeholder="E-mail" type="email" class="form-control" />
 			          </div>
 			
 			          <div class="form-item col-sm-4">
