--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
@@ -45,6 +45,9 @@
 
   	<script th:src="@{/js/jquery-2.2.3.min.js}"></script>
 	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/jquery.mask.min.js}"></script>
+	<script th:src="@{/js/localization/messages_pt_BR.min.js}"></script>
+	<script th:src="@{/js/jquery.validate.min.js}"></script>
 	<script th:src="@{/js/gestao-pessoas.js}"></script>
 </body>
 </html>
