Atualização do layout; Correção do papel ao efetuar o login;

--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutEstagiario.html
@@ -7,13 +7,16 @@
 	<meta charset="UTF-8"/>
 	<title>Gestão Pessoas</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+	
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-paper.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/animate.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/sweetalert-boostrap.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/gestao-pessoas.css}"/>
 </head>
 <body >
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-default">
 	  <div class="container">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
