--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/login.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/login.html
@@ -8,7 +8,6 @@
 	<title>Gestão Pessoas | Entrar</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-paper.min.css}"/>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/animate.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/gestao-pessoas.css}"/>
 	
 	<style type="text/css">
@@ -47,7 +46,7 @@
 	
 </head>
 <body >
-  		<div class="gp-box-login animated zoomIn">
+  		<div class="gp-box-login">
 			<form th:action="@{/login}" method="post" role="form">
 
 			<div class="panel panel-primary">
