--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/layouts/LayoutSupervisor.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/gestao-pessoas.css}"/>
 </head>
 <body >
-	<nav class="navbar navbar-inverse">
+	<nav class="navbar navbar-default">
 	  <div class="container">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
