--- a/aplicacoes/gestao-pessoas/src/main/resources/static/css/gestao-pessoas.css
+++ b/aplicacoes/gestao-pessoas/src/main/resources/static/css/gestao-pessoas.css
@@ -128,6 +128,7 @@ a:hover {
     background: inherit;
     box-shadow: none;
     color: rgba(236, 239, 241, 0.7);
+    font-weight: bold;
 }
 
 a.btn.gp-btn-opcao:hover, a.btn.gp-btn-opcao:focus {
